Started work on the parsing panel in the default importing wizard.
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2017 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
@@ -1,1 +1,9 @@
 <div bind="wizardHeader" class="default-importing-wizard-header"></div>
+<div bind="dataPanel" class="default-importing-parsing-data-panel"></div>
+<div bind="controlPanel" class="default-importing-parsing-control-panel"><table><tr>
+  <td class="default-importing-parsing-control-panel-formats">
+    <div class="default-importing-parsing-control-panel-formats-message">Parse data as</div>
+    <div bind="formatsContainer"></div>
+  </td>
+  <td bind="optionsContainer" class="default-importing-parsing-control-panel-options-panel"></td>
+</tr></table></div>
