More work. Checking in before changing Importer interface.
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2019 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/scripts/index/default-importing-controller/file-selection-panel.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-controller/file-selection-panel.html
@@ -1,4 +1,9 @@
-<div bind="wizardHeader" class="default-importing-wizard-header"></div>
+<div bind="wizardHeader" class="default-importing-wizard-header"><div class="grid-layout layout-tightest layout-full"><table><tr>
+  <td width="1%"><button bind="startOverButton" class="button">&laquo; Start Over</button></td>
+  <td width="98%" style="text-align: center;">Select Files to Import</td>
+  <td width="1%"><button bind="nextButton" class="button">Next &raquo;</button></td>
+</tr></table></div></div>
+
 <div bind="controlPanel" class="default-importing-file-selection-control-panel">
   <div class="grid-layout layout-full layout-tighter"><table>
     <tr>
@@ -27,4 +32,5 @@
     </tr>
   </table></div>
 </div>
+
 <div bind="filePanel" class="default-importing-file-selection-file-panel"></div>
