--- a/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
@@ -1,5 +1,12 @@
-<div bind="wizardHeader" class="default-importing-wizard-header"></div>
+<div bind="wizardHeader" class="default-importing-wizard-header"><div class="grid-layout layout-tightest layout-full"><table><tr>
+  <td width="1%"><button bind="startOverButton" class="button">&laquo; Start Over</button></td>
+  <td style="text-align: center;">Project name <input /></td>
+  <td width="1%"><button bind="previousButton" class="button">&laquo; Previous</button></td>
+  <td width="1%"><button bind="nextButton" class="button">Next &raquo;</button></td>
+</tr></table></div></div>
+
 <div bind="dataPanel" class="default-importing-parsing-data-panel"></div>
+
 <div bind="controlPanel" class="default-importing-parsing-control-panel"><table><tr>
   <td class="default-importing-parsing-control-panel-formats">
     <div class="default-importing-parsing-control-panel-formats-message">Parse data as</div>
