The separator-based file parser option UI is starting to work: it can preview data and react to changing options now.
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2035 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
@@ -1,8 +1,10 @@
 <div bind="wizardHeader" class="default-importing-wizard-header"><div class="grid-layout layout-tightest layout-full"><table><tr>
   <td width="1%"><button bind="startOverButton" class="button">&laquo; Start Over</button></td>
-  <td style="text-align: center;">Project name <input /></td>
-  <td width="1%"><button bind="previousButton" class="button">&laquo; Previous</button></td>
-  <td width="1%"><button bind="nextButton" class="button">Next &raquo;</button></td>
+  <td width="1%"><button bind="previousButton" class="button">&laquo; Re-select Files</button></td>
+  <td width="98%">Configure Parsing Options</td>
+  <td style="text-align: right;">Project&nbsp;name</td>
+  <td width="1%"><input class="inline" type="text" size="30" /></td>
+  <td width="1%"><button bind="nextButton" class="button button-primary">Create Project</button></td>
 </tr></table></div></div>
 
 <div bind="dataPanel" class="default-importing-parsing-data-panel"></div>
