The importer UI now works for CSV/TSV/separator-based files (all the way to having projects created).
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2036 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
@@ -3,7 +3,7 @@
   <td width="1%"><button bind="previousButton" class="button">&laquo; Re-select Files</button></td>
   <td width="98%">Configure Parsing Options</td>
   <td style="text-align: right;">Project&nbsp;name</td>
-  <td width="1%"><input class="inline" type="text" size="30" /></td>
+  <td width="1%"><input class="inline" type="text" size="30" bind="projectNameInput" /></td>
   <td width="1%"><button bind="nextButton" class="button button-primary">Create Project</button></td>
 </tr></table></div></div>
 
