--- a/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
@@ -8,6 +8,9 @@
 </tr></table></div></div>
 
 <div bind="dataPanel" class="default-importing-parsing-data-panel"></div>
+<div bind="progressPanel" class="default-importing-progress-data-panel">
+    <img src="images/large-spinner.gif" /> Updating preview ...
+</div>
 
 <div bind="controlPanel" class="default-importing-parsing-control-panel"><table><tr>
   <td class="default-importing-parsing-control-panel-formats">
