Implemented Excel importer parser UI.
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2053 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
+++ b/main/webapp/modules/core/scripts/index/default-importing-controller/parsing-panel.html
@@ -4,7 +4,7 @@
   <td width="98%">Configure Parsing Options</td>
   <td style="text-align: right;">Project&nbsp;name</td>
   <td width="1%"><input class="inline" type="text" size="30" bind="projectNameInput" /></td>
-  <td width="1%"><button bind="nextButton" class="button button-primary">Create Project</button></td>
+  <td width="1%"><button bind="nextButton" class="button button-primary">Create Project &raquo;</button></td>
 </tr></table></div></div>
 
 <div bind="dataPanel" class="default-importing-parsing-data-panel"></div>
